@@ -64,7 +64,7 @@ struct test_case                        tests[] =
     {
         .method = "PUT",
         .uri_pattern = "/request-test/put",
-        .response_code = 201,
+        .response_code = 204,
         .upload_body = "data",
     },
     {
@@ -315,10 +315,14 @@ void *server_thread(void *arg)
                     test->server_read_offset += nbytes;
                     if (result != GLOBUS_SUCCESS)
                     {
-                        if (globus_xio_driver_error_match(
-                                http_driver,
+                        if (globus_error_match(
                                 globus_error_peek(result),
-                                GLOBUS_XIO_HTTP_ERROR_EOF) == 0)
+                                GLOBUS_XIO_MODULE,
+                                GLOBUS_XIO_ERROR_EOF)
+                            || globus_xio_driver_error_match(
+                                    http_driver,
+                                    globus_error_peek(result),
+                                    GLOBUS_XIO_HTTP_ERROR_EOF))
                         {
                             result = GLOBUS_SUCCESS;
                             break;
